landing page additions

--- a/app/assets/stylesheets/modules/template.css
+++ b/app/assets/stylesheets/modules/template.css
@@ -6,3 +6,15 @@
  .site-main-splash {
  	 margin-top: 0px;
  }
+
+ .icon-xxl {
+ 	font-size: 250px;
+ }
+
+.icon-xl {
+ 	font-size: 170px;
+ }
+
+ .icon-md {
+ 	font-size: 120px;
+ }
