--- a/app/views/layouts/splash.haml
+++ b/app/views/layouts/splash.haml
@@ -4,7 +4,7 @@
     %meta{charset: "utf-8"}/
     %meta{content: "IE=edge", "http-equiv" => "X-UA-Compatible"}/
     %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}/
-    %title Sign In Easy | Visitor Management For Modern Co-Working Spaces
+    %title Sign In Easy | Visitor Management For Modern Office Spaces
     = javascript_include_tag 'application'
     = csrf_meta_tag 
     = stylesheet_link_tag 'application' 
@@ -26,13 +26,9 @@
             %li
               %a{href: "#portfolio"} Portfolio
             %li
-              %a{href: "#testimonials"} Testimonials
-            %li
-              %a{href: "#blog"} Blog
-            %li
-              %a{href: "#clients"} Clients
-            %li
               %a{href: "#contact"} Contact
+            %li
+              %a{href: "#"} Sign up
             %li
               %a{href: "#"} Log in
 
