--- a/app/views/layouts/splash.haml
+++ b/app/views/layouts/splash.haml
@@ -28,8 +28,8 @@
             %li
               %a{href: "#contact"} Contact
             %li
-              %a{href: "#"} Sign up
-            %li
               %a{href: "#"} Log in
+            %li
+              %a.btn.btn-success{href: "#"} Sign up
 
     = yield
