--- a/app/views/guests/_form_event.haml
+++ b/app/views/guests/_form_event.haml
@@ -32,4 +32,6 @@
     .form-group.center-buttons.span-3
       = f.submit 'Register', :class => 'btn btn-success btn-xlg'
     .form-group.center-buttons.span-3  
-      =# submit_tag 'Cancel', :type => :reset, :class => 'btn btn-default'
+      %button.btn.form-cancel{type: "reset"}
+        %i.fa.fa-arrow-left
+        Back 
