--- a/app/views/guests/_form_meeting.haml
+++ b/app/views/guests/_form_meeting.haml
@@ -41,4 +41,7 @@
       .form-group.center-buttons.span-3
         = f.submit 'Register', :class => 'btn btn-success btn-xlg', :id => 'registerButton'
       .form-group.center-buttons.span-3  
-        =# submit_tag 'Cancel', :type => :reset, :class => 'btn btn-default form-cancel'
+        %button.btn.form-cancel{type: "reset"}
+          %i.fa.fa-arrow-left
+          Back 
+       
