event message update

--- a/app/views/guests/show.haml
+++ b/app/views/guests/show.haml
@@ -29,7 +29,7 @@
     -if @guest.reason == "Tour"
       %h2 Please take a seat in the waiting area before your tour starts.
     -elsif @guest.reason == "Event"
-      %h2 Please take a seat in the waiting area before your event starts.
+      %h2 Please proceed to your event.
     -elsif @guest.reason == "Other"
       %h2 Please take a seat in the waiting area.
     %br
