updated guest ui for alertcaster logo

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -30,10 +30,9 @@
   padding-top: 30px
 
 .bottom-logo-container
-  position: fixed
-  margin-left: -96.5px
-  bottom: 25px
-  left: 50% 
+  margin-top: 8%
+  text-align: center
+  left: 50%
 
 .organization-logo-container
   
