added back button to forms

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -41,8 +41,8 @@
 
 .visitor-ui-home-icon
   position: fixed
-  bottom: 15px
-  right: 15px
+  top: 25px
+  left: 25px
 
 .visitor-ui-refresh
   position: fixed
