--- a/app/views/guests/_form_meeting.haml
+++ b/app/views/guests/_form_meeting.haml
@@ -1,3 +1,8 @@
+.visitor-ui-home-icon
+  %button.btn-lg.btn-custom.form-cancel{type: "reset"}
+    %i.fa.fa-arrow-left
+    Back
+
 %br
 
   .h3.col-lg-10.col-lg-offset-1.center Let us know who you are meeting with and 
@@ -40,8 +45,5 @@
 
       .form-group.center-buttons.span-3
         = f.submit 'Register', :class => 'btn btn-success btn-xlg', :id => 'registerButton'
-      .form-group.center-buttons.span-3  
-        %button.btn.form-cancel{type: "reset"}
-          %i.fa.fa-arrow-left
-          Back 
+
        
