--- a/app/views/guests/_form_event.haml
+++ b/app/views/guests/_form_event.haml
@@ -1,3 +1,8 @@
+.visitor-ui-home-icon
+  %button.btn-lg.btn-custom.form-cancel{type: "reset"}
+    %i.fa.fa-arrow-left
+    Back
+
 %br
   .h3.col-lg-10.col-lg-offset-1.center Last step! Please fill out the information below.
 
@@ -31,7 +36,4 @@
 
     .form-group.center-buttons.span-3
       = f.submit 'Register', :class => 'btn btn-success btn-xlg'
-    .form-group.center-buttons.span-3  
-      %button.btn.form-cancel{type: "reset"}
-        %i.fa.fa-arrow-left
-        Back 
+
