hide alertcaster logo upon button choice

--- a/app/assets/stylesheets/modules/visitor-form.sass
+++ b/app/assets/stylesheets/modules/visitor-form.sass
@@ -19,7 +19,7 @@
   top: 50%
   transform: translate(-50%, -50%)
 
-.btn-grid
+.btn-grid-css
   position: relative
   padding-top: 25px
   /* bottom: 100px
@@ -30,7 +30,7 @@
   padding-top: 30px
 
 .bottom-logo-container
-  margin-top: 8%
+  margin-top: 5%
   text-align: center
   left: 50%
 
