--- a/app/views/guests/new.haml
+++ b/app/views/guests/new.haml
@@ -8,7 +8,7 @@
 
       
 .row
-  .btn-grid
+  .btn-grid.btn-grid-css
     %br
       .h1 
         What brings you in today?
@@ -44,7 +44,7 @@
       %a
       %button(type="submit" class="btn btn-default btn other-btn")
         Click Here
-	
+
 
 .form-ui.form-meeting.group
   = render :partial => 'form_meeting'
@@ -56,7 +56,7 @@
   = render :partial => 'form_other'
  
 .row-fluid
-  .bottom-logo-container
+  .bottom-logo-container.btn-grid
     .h4
       Powered by:
     .br  
